--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/pwkinsley87/profile-generator#readme",
   "dependencies": {
+    "init": "^0.1.2",
     "inquirer": "^9.0.0",
     "jest": "^28.1.2"
   }
